feat: add inicial index.html structure

--- a/index.html
+++ b/index.html
@@ -1,12 +1,148 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="style.css" />
+        <title>Larissa Felix | Advogada</title>
+    </head>
+    <body>
+        <header>
+            <h1>Larissa Felix</h1>
+            <nav id="nav-bar">
+                <ul>
+                    <li><a href="#">Sobre</a></li>
+                    <li><a href="#">Serviços</a></li>
+                    <li><a href="#">Contato</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section id="hero">
+                <div class="hero-content">
+                    <h2>Claridade e Confianca em Cada Contrato</h2>
+                    <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Cumque doloremque aliquam ratione tempore suscipit
+                        magnam expedita modi provident
+                    </p>
+                    <div class="buttons-container">
+                        <button class="default">Marque uma Consulta</button>
+                        <button class="alt">Conheça Mais</button>
+                    </div>
+                </div>
+                <div id="hero-image-container">
+                    <img src="#" alt="Foto de perfil de Larissa Felix." />
+                </div>
+            </section>
+            <section id="about">
+                <div id="about-image-container">
+                    <img src="#" alt="Larissa recebendo um cliente." />
+                </div>
+                <div id="about-content">
+                    <h2>Sobre</h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Excepturi nisi blanditiis explicabo animi perspiciatis
+                        corporis inventore fugit obcaecati nulla! Rem, natus
+                        nisi odio maxime unde sequi nam ad eaque molestiae.
+                    </p>
+                    <div class="icons-container">
+                        <ul>
+                            <li>Analize de Contratos</li>
+                            <li>Desenvolvimento de Contratos</li>
+                            <li>Suporte em Negociações</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section id="services">
+                <h2>Serviços</h2>
+                <div class="services-container">
+                    <div class="service-card">
+                        <h3>Contratos Empresariais</h3>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing
+                            elit. Earum perferendis nihil nemo officiis optio
+                            ipsa facere
+                        </p>
+                    </div>
+                    <div class="service-card">
+                        <h3>Contratos Trabalhistas</h3>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing
+                            elit. Earum perferendis nihil nemo officiis optio
+                            ipsa facere
+                        </p>
+                    </div>
+                    <div class="service-card">
+                        <h3>Contratos Pessoais</h3>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing
+                            elit. Earum perferendis nihil nemo officiis optio
+                            ipsa facere
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <div id="call-to-action">
+                <p>Seus Contratos merecem precisão e proteção</p>
+            </div>
+            <section id="testimonials">
+                <div class="testimony">
+                    <blockquote>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing
+                        elit. Illum deserunt earum exercitationem quibusdam
+                    </blockquote>
+                    <cite>- Emily R.</cite>
+                </div>
+            </section>
+            <section id="contact">
+                <h2>Contato</h2>
+                <div id="contact-container">
+                    <form id="contact-form" action="#">
+                        <label for="name">Nome</label>
+                        <input type="text" id="name" required />
+                        <label for="email">Email</label>
+                        <input type="email" id="email" required />
+                        <label for="services">Serviço</label>
+                        <select name="services" id="services" required>
+                            <option value="">Escolha um serviço</option>
+                            <option value="1">Contratos Empresariais</option>
+                            <option value="2">Contratos Trabalhistas</option>
+                            <option value="3">Contratos Pessoais</option>
+                        </select>
+                        <label for="message">Mensagem</label>
+                        <textarea
+                            name="message"
+                            id="message"
+                            maxlength="500"
+                        ></textarea>
+                        <button type="submit">Confirmar</button>
+                    </form>
+                    <div id="info-container">
+                        <div id="map">
+                            <iframe
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126418.20443030934!2d-35.01661897943269!3d-8.04330299056202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab196f94e5408b%3A0xe5800ef782bde3a6!2sRecife%2C%20PE!5e0!3m2!1spt-BR!2sbr!4v1754675500779!5m2!1spt-BR!2sbr"
+                                width="600"
+                                height="450"
+                                style="border: 0"
+                                allowfullscreen=""
+                                loading="lazy"
+                                referrerpolicy="no-referrer-when-downgrade"
+                            ></iframe>
+                        </div>
+                        <div class="info">
+                            <ul>
+                                <li>Phone: +00 (00) 00000-0000</li>
+                                <li>Email: email@teste.com</li>
+                                <li>Disponivel: 08:00 - 19:00 | Seg - Sex</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
+        <footer></footer>
+    </body>
 </html>
