--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <h1>Larissa Felix</h1>
-            <nav id="navbar">
+            <nav class="navbar">
                 <ul>
                     <li><a href="#about">Sobre</a></li>
                     <li><a href="#services">Serviços</a></li>
@@ -155,7 +155,19 @@
             </section>
         </main>
         <footer>
-            
+            <nav class="navbar vertical">
+                <ul>
+                    <li><a href="#about">Sobre</a></li>
+                    <li><a href="#services">Serviços</a></li>
+                    <li><a href="#contact">Contato</a></li>
+                </ul>
+            </nav>
+            <nav class="navbar vertical">
+                <ul>
+                    <li><a href="#">LinkedIn</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+            </nav>
         </footer>
     </body>
 </html>
