--- a/index.html
+++ b/index.html
@@ -8,147 +8,160 @@
     </head>
     <body>
         <header>
-            <h1>Larissa Felix</h1>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="#about">Sobre</a></li>
-                    <li><a href="#services">Serviços</a></li>
-                    <li><a href="#contact">Contato</a></li>
-                </ul>
-            </nav>
+            <div id="header-container">
+                <h1>Larissa Felix</h1>
+                <nav class="navbar">
+                    <ul>
+                        <li><a href="#about">Sobre</a></li>
+                        <li><a href="#services">Serviços</a></li>
+                        <li><a href="#contact">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <main>
             <section id="hero">
-                <div id="hero-content">
-                    <h2>Claridade e Confianca em Cada Contrato</h2>
-                    <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing
-                        elit. Cumque doloremque aliquam ratione tempore suscipit
-                        magnam expedita modi provident
-                    </p>
-                    <div class="buttons-container">
-                        <button class="default">Marque uma Consulta</button>
-                        <button class="alt">Conheça Mais</button>
+                <div id="hero-container">
+                    <div id="hero-content">
+                        <h2>Claridade e Confianca em Cada Contrato</h2>
+                        <p>
+                            Lorem ipsum dolor, sit amet consectetur adipisicing
+                            elit. Cumque doloremque aliquam ratione tempore suscipit
+                            magnam expedita modi provident
+                        </p>
+                        <div class="buttons-container">
+                            <button class="default">Marque uma Consulta</button>
+                            <button class="alt">Conheça Mais</button>
+                        </div>
                     </div>
-                </div>
-                <div id="hero-image-container">
-                    <img src="#" alt="Foto de perfil de Larissa Felix." />
+                    <div id="hero-image-container">
+                        <img src="assets/larissa_profile_picture.jpeg" alt="Foto de perfil de Larissa Felix." />
+                    </div>
                 </div>
             </section>
             <section id="about">
-                <div id="about-image-container">
-                    <img src="#" alt="Larissa recebendo um cliente." />
-                </div>
-                <div id="about-content">
-                    <h2>Sobre</h2>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Excepturi nisi blanditiis explicabo animi perspiciatis
-                        corporis inventore fugit obcaecati nulla! Rem, natus
-                        nisi odio maxime unde sequi nam ad eaque molestiae.
-                    </p>
-                    <div class="icons-container">
-                        <ul>
-                            <li>Analize de Contratos</li>
-                            <li>Desenvolvimento de Contratos</li>
-                            <li>Suporte em Negociações</li>
-                        </ul>
+                <div id="about-container">
+                    <div id="about-image-container">
+                        <img src="#" alt="Larissa recebendo um cliente." />
+                    </div>
+                    <div id="about-content">
+                        <h2>Sobre</h2>
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Excepturi nisi blanditiis explicabo animi perspiciatis
+                            corporis inventore fugit obcaecati nulla! Rem, natus
+                            nisi odio maxime unde sequi nam ad eaque molestiae.
+                        </p>
+                        <div class="icons-container">
+                            <ul>
+                                <li>Analize de Contratos</li>
+                                <li>Desenvolvimento de Contratos</li>
+                                <li>Suporte em Negociações</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </section>
             <section id="services">
-                <h2>Serviços</h2>
                 <div id="services-container">
-                    <div class="service-card">
-                        <h3>Contratos Empresariais</h3>
-                        <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing
-                            elit. Earum perferendis nihil nemo officiis optio
-                            ipsa facere
-                        </p>
-                    </div>
-                    <div class="service-card">
-                        <h3>Contratos Trabalhistas</h3>
-                        <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing
-                            elit. Earum perferendis nihil nemo officiis optio
-                            ipsa facere
-                        </p>
-                    </div>
-                    <div class="service-card">
-                        <h3>Contratos Pessoais</h3>
-                        <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing
-                            elit. Earum perferendis nihil nemo officiis optio
-                            ipsa facere
-                        </p>
+                    <h2>Serviços</h2>
+                    <div id="services-cards-container">
+                        <div class="service-card">
+                            <h3>Contratos Empresariais</h3>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing
+                                elit. Earum perferendis nihil nemo officiis optio
+                                ipsa facere
+                            </p>
+                        </div>
+                        <div class="service-card">
+                            <h3>Contratos Trabalhistas</h3>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing
+                                elit. Earum perferendis nihil nemo officiis optio
+                                ipsa facere
+                            </p>
+                        </div>
+                        <div class="service-card">
+                            <h3>Contratos Pessoais</h3>
+                            <p>
+                                Lorem ipsum dolor, sit amet consectetur adipisicing
+                                elit. Earum perferendis nihil nemo officiis optio
+                                ipsa facere
+                            </p>
+                        </div>
                     </div>
                 </div>
             </section>
             <section id="testimonials">
-                <div class="testimony">
-                    <blockquote>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing
-                        elit. Illum deserunt earum exercitationem quibusdam
-                    </blockquote>
-                    <cite>- Emily R.</cite>
+                <div id="testimonials-container">
+                    <div class="testimony">
+                        <blockquote>
+                            Lorem, ipsum dolor sit amet consectetur adipisicing
+                            elit. Illum deserunt earum exercitationem quibusdam
+                        </blockquote>
+                        <cite>- Emily R.</cite>
+                    </div>
                 </div>
             </section>
             <div id="call-to-action">
                 <p>Seus Contratos merecem precisão e proteção</p>
             </div>
             <section id="contact">
-                <h2>Contato</h2>
+                
                 <div id="contact-container">
-                    <form id="contact-form" action="#">
-                        <label for="name">Nome</label>
-                        <input
-                            type="text"
-                            id="name"
-                            placeholder="Nome"
-                            required
-                        />
-                        <label for="email">Email</label>
-                        <input
-                            type="email"
-                            id="email"
-                            placeholder="Email"
-                            required
-                        />
-                        <label for="services">Serviço</label>
-                        <select name="services" id="services" required>
-                            <option value="">Escolha um serviço</option>
-                            <option value="1">Contratos Empresariais</option>
-                            <option value="2">Contratos Trabalhistas</option>
-                            <option value="3">Contratos Pessoais</option>
-                        </select>
-                        <label for="message">Mensagem</label>
-                        <textarea
-                            name="message"
-                            id="message"
-                            maxlength="500"
-                            placeholder="Mensagem"
-                        ></textarea>
-                        <button class="default" type="submit">Confirmar</button>
-                    </form>
-                    <div id="info-container">
-                        <div id="map">
-                            <iframe
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126418.20443030934!2d-35.01661897943269!3d-8.04330299056202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab196f94e5408b%3A0xe5800ef782bde3a6!2sRecife%2C%20PE!5e0!3m2!1spt-BR!2sbr!4v1754675500779!5m2!1spt-BR!2sbr"
-                                width="auto"
-                                height="auto"
-                                style="border: 0"
-                                allowfullscreen=""
-                                loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade"
-                            ></iframe>
-                        </div>
-                        <div id="info">
-                            <ul>
-                                <li>Phone: +00 (00) 00000-0000</li>
-                                <li>Email: email@teste.com</li>
-                                <li>Disponivel: 08:00 - 19:00 | Seg - Sex</li>
-                            </ul>
+                    <h2>Contato</h2>
+                    <div id="contact-content-container">
+                        <form id="contact-form" action="#">
+                            <label for="name">Nome</label>
+                            <input
+                                type="text"
+                                id="name"
+                                placeholder="Nome"
+                                required
+                            />
+                            <label for="email">Email</label>
+                            <input
+                                type="email"
+                                id="email"
+                                placeholder="Email"
+                                required
+                            />
+                            <label for="services">Serviço</label>
+                            <select name="services" id="services" required>
+                                <option value="">Escolha um serviço</option>
+                                <option value="1">Contratos Empresariais</option>
+                                <option value="2">Contratos Trabalhistas</option>
+                                <option value="3">Contratos Pessoais</option>
+                            </select>
+                            <label for="message">Mensagem</label>
+                            <textarea
+                                name="message"
+                                id="message"
+                                maxlength="500"
+                                placeholder="Mensagem"
+                            ></textarea>
+                            <button class="default" type="submit">Confirmar</button>
+                        </form>
+                        <div id="info-container">
+                            <div id="map">
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126418.20443030934!2d-35.01661897943269!3d-8.04330299056202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7ab196f94e5408b%3A0xe5800ef782bde3a6!2sRecife%2C%20PE!5e0!3m2!1spt-BR!2sbr!4v1754675500779!5m2!1spt-BR!2sbr"
+                                    width="auto"
+                                    height="auto"
+                                    style="border: 0"
+                                    allowfullscreen=""
+                                    loading="lazy"
+                                    referrerpolicy="no-referrer-when-downgrade"
+                                ></iframe>
+                            </div>
+                            <div id="info">
+                                <ul>
+                                    <li>Phone: +00 (00) 00000-0000</li>
+                                    <li>Email: email@teste.com</li>
+                                    <li>Disponivel: 08:00 - 19:00 | Seg - Sex</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
