feat: add about placeholder image

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <section id="about">
                 <div id="about-container">
                     <div id="about-image-container">
-                        <img src="#" alt="Larissa recebendo um cliente." />
+                        <img src="assets/working-placeholder.png" alt="Larissa recebendo um cliente." />
                     </div>
                     <div id="about-content">
                         <h2>Sobre</h2>
