feat: adapt layout to mobile devices

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </p>
                         <div class="icons-container">
                             <ul>
-                                <li>Analize de Contratos</li>
+                                <li>Analise de Contratos</li>
                                 <li>Desenvolvimento de Contratos</li>
                                 <li>Suporte em Negociações</li>
                             </ul>
@@ -108,7 +108,6 @@
                 <p>Seus Contratos merecem precisão e proteção</p>
             </div>
             <section id="contact">
-                
                 <div id="contact-container">
                     <h2>Contato</h2>
                     <div id="contact-content-container">
