feat: add proper textual content

--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
             <section id="hero">
                 <div id="hero-container">
                     <div id="hero-content">
-                        <h2>Claridade e Confianca em Cada Contrato</h2>
+                        <h2>Transparência e Cuidado em Cada Contrato</h2>
                         <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing
-                            elit. Cumque doloremque aliquam ratione tempore suscipit
-                            magnam expedita modi provident
+                            Atuo com atenção aos detalhes e expertise em Direito
+                            Empresarial e na Indústria Musical para criar
+                            contratos claros, equilibrados e seguros. Meu
+                            objetivo é proteger seus interesses e fortalecer
+                            suas relações comerciais e artísticas.
                         </p>
                         <div class="buttons-container">
                             <button class="default">Marque uma Consulta</button>
@@ -35,26 +37,36 @@
                         </div>
                     </div>
                     <div id="hero-image-container">
-                        <img src="assets/larissa_profile_picture.jpeg" alt="Foto de perfil de Larissa Felix." />
+                        <img
+                            src="assets/larissa_profile_picture.jpeg"
+                            alt="Foto de perfil de Larissa Felix."
+                        />
                     </div>
                 </div>
             </section>
             <section id="about">
                 <div id="about-container">
                     <div id="about-image-container">
-                        <img src="assets/working-placeholder.png" alt="Larissa recebendo um cliente." />
+                        <img
+                            src="assets/working-placeholder.png"
+                            alt="Larissa recebendo um cliente."
+                        />
                     </div>
                     <div id="about-content">
                         <h2>Sobre</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Excepturi nisi blanditiis explicabo animi perspiciatis
-                            corporis inventore fugit obcaecati nulla! Rem, natus
-                            nisi odio maxime unde sequi nam ad eaque molestiae.
+                            Advogada especializada em Direito Empresarial e
+                            Contratos, com experiência na assessoria jurídica
+                            para empresas, artistas e profissionais da indústria
+                            musical. Une conhecimento técnico e visão
+                            estratégica para proteger interesses e facilitar
+                            negociações, oferecendo soluções jurídicas sob
+                            medida tanto no mundo corporativo quanto no cenário
+                            artístico.
                         </p>
                         <div class="icons-container">
                             <ul>
-                                <li>Analise de Contratos</li>
+                                <li>Análise de Contratos</li>
                                 <li>Desenvolvimento de Contratos</li>
                                 <li>Suporte em Negociações</li>
                             </ul>
@@ -67,27 +79,29 @@
                     <h2>Serviços</h2>
                     <div id="services-cards-container">
                         <div class="service-card">
-                            <h3>Contratos Empresariais</h3>
+                            <h3>Direito Empresarial e Contratos</h3>
                             <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing
-                                elit. Earum perferendis nihil nemo officiis optio
-                                ipsa facere
+                                Elaboração, revisão e negociação de contratos
+                                empresariais com foco em clareza e segurança
+                                jurídica. Prevenção de riscos e fortalecimento
+                                de relações comerciais.
                             </p>
                         </div>
                         <div class="service-card">
-                            <h3>Contratos Trabalhistas</h3>
+                            <h3>Direito na Indústria Musical</h3>
                             <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing
-                                elit. Earum perferendis nihil nemo officiis optio
-                                ipsa facere
+                                Proteção jurídica para artistas e empresas do
+                                setor musical. Contratos de shows,
+                                licenciamento, distribuição e gestão de carreira
+                                com segurança e valorização da obra.
                             </p>
                         </div>
                         <div class="service-card">
-                            <h3>Contratos Pessoais</h3>
+                            <h3>Assessoria Jurídica Contínua</h3>
                             <p>
-                                Lorem ipsum dolor, sit amet consectetur adipisicing
-                                elit. Earum perferendis nihil nemo officiis optio
-                                ipsa facere
+                                Consultoria recorrente para empresas e artistas.
+                                Suporte preventivo e soluções rápidas para
+                                desafios diários e projetos estratégicos.
                             </p>
                         </div>
                     </div>
@@ -97,10 +111,10 @@
                 <div id="testimonials-container">
                     <div class="testimony">
                         <blockquote>
-                            Lorem, ipsum dolor sit amet consectetur adipisicing
-                            elit. Illum deserunt earum exercitationem quibusdam
+                            A confiança é a cola da vida. É o ingrediente mais
+                            essencial na comunicação eficaz.
                         </blockquote>
-                        <cite>- Emily R.</cite>
+                        <cite>— Stephen R. Covey</cite>
                     </div>
                 </div>
             </section>
@@ -129,8 +143,12 @@
                             <label for="services">Serviço</label>
                             <select name="services" id="services" required>
                                 <option value="">Escolha um serviço</option>
-                                <option value="1">Contratos Empresariais</option>
-                                <option value="2">Contratos Trabalhistas</option>
+                                <option value="1">
+                                    Contratos Empresariais
+                                </option>
+                                <option value="2">
+                                    Contratos Trabalhistas
+                                </option>
                                 <option value="3">Contratos Pessoais</option>
                             </select>
                             <label for="message">Mensagem</label>
@@ -140,7 +158,9 @@
                                 maxlength="500"
                                 placeholder="Mensagem"
                             ></textarea>
-                            <button class="default" type="submit">Confirmar</button>
+                            <button class="default" type="submit">
+                                Confirmar
+                            </button>
                         </form>
                         <div id="info-container">
                             <div id="map">
@@ -158,7 +178,9 @@
                                 <ul>
                                     <li>Phone: +00 (00) 00000-0000</li>
                                     <li>Email: email@teste.com</li>
-                                    <li>Disponivel: 08:00 - 19:00 | Seg - Sex</li>
+                                    <li>
+                                        Disponivel: 08:00 - 19:00 | Seg - Sex
+                                    </li>
                                 </ul>
                             </div>
                         </div>
