--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
                             suas relações comerciais e artísticas.
                         </p>
                         <div class="buttons-container">
-                            <button class="default">Marque uma Consulta</button>
-                            <button class="alt">Conheça Mais</button>
+                            <a href="#contact" class="button default"
+                                >Marque uma Consulta</a
+                            >
+                            <a href="#about" class="button alt">Conheça Mais</a>
                         </div>
                     </div>
                     <div id="hero-image-container">
@@ -158,7 +160,7 @@
                                 maxlength="500"
                                 placeholder="Mensagem"
                             ></textarea>
-                            <button class="default" type="submit">
+                            <button class="button default" type="submit">
                                 Confirmar
                             </button>
                         </form>
