chore: add icons to the page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="style.css" />
+        <link
+            rel="shortcut icon"
+            href="assets/balance.png"
+            type="image/x-icon"
+        />
         <title>Larissa Felix | Advogada</title>
     </head>
     <body>
@@ -68,9 +73,31 @@
                         </p>
                         <div class="icons-container">
                             <ul>
-                                <li>Análise de Contratos</li>
-                                <li>Desenvolvimento de Contratos</li>
-                                <li>Suporte em Negociações</li>
+                                <li>
+                                    <span
+                                        ><img
+                                            src="assets/contract.png"
+                                            alt="contract icon"
+                                        />
+                                    </span>
+                                    Análise de Contratos
+                                </li>
+                                <li>
+                                    <span
+                                        ><img
+                                            src="assets/contract_edit.png"
+                                            alt="contract edit icon"
+                                        /> </span
+                                    >Desenvolvimento de Contratos
+                                </li>
+                                <li>
+                                    <span
+                                        ><img
+                                            src="assets/handshake.png"
+                                            alt="handshake icon"
+                                        /> </span
+                                    >Suporte em Negociações
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -81,6 +108,12 @@
                     <h2>Serviços</h2>
                     <div id="services-cards-container">
                         <div class="service-card">
+                            <span>
+                                <img
+                                    src="assets/docs.png"
+                                    alt="document icon"
+                                />
+                            </span>
                             <h3>Direito Empresarial e Contratos</h3>
                             <p>
                                 Elaboração, revisão e negociação de contratos
@@ -90,6 +123,12 @@
                             </p>
                         </div>
                         <div class="service-card">
+                            <span>
+                                <img
+                                    src="assets/artist.png"
+                                    alt="artist icon"
+                                />
+                            </span>
                             <h3>Direito na Indústria Musical</h3>
                             <p>
                                 Proteção jurídica para artistas e empresas do
@@ -99,6 +138,12 @@
                             </p>
                         </div>
                         <div class="service-card">
+                            <span>
+                                <img
+                                    src="assets/balance.png"
+                                    alt="balance icon"
+                                />
+                            </span>
                             <h3>Assessoria Jurídica Contínua</h3>
                             <p>
                                 Consultoria recorrente para empresas e artistas.
